Not working AI (moves all at once). Now player movement is also dead :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,14 +13,21 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_library(game_lib "src/game.cpp" "src/board.cpp" "src/piece.cpp")
 target_include_directories(game_lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
+target_include_directories(game_lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/minimax/")
+
+add_library(minimax_lib "src/algorithm.cpp")
+target_include_directories(minimax_lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/minimax/")
+target_include_directories(minimax_lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
 
 add_library(interface_lib "src/startScreen.cpp" "src/gameScreen.cpp" "src/settingsScreen.cpp")
 target_include_directories(interface_lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/interface/")
 target_include_directories(interface_lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
+target_include_directories(interface_lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/minimax/")
 
-add_executable("PiAA-Project_3-Game" "src/main.cpp" "src/web_ver.cpp" "src/game.cpp" "src/board.cpp" "src/piece.cpp" "src/startScreen.cpp" "src/gameScreen.cpp" "src/settingsScreen.cpp")
+add_executable("PiAA-Project_3-Game" "src/main.cpp" "src/web_ver.cpp" "src/game.cpp" "src/board.cpp" "src/piece.cpp" "src/startScreen.cpp" "src/gameScreen.cpp" "src/settingsScreen.cpp" "src/algorithm.cpp")
 target_link_libraries("PiAA-Project_3-Game" game_lib)
 target_link_libraries("PiAA-Project_3-Game" interface_lib)
+target_link_libraries("PiAA-Project_3-Game" minimax_lib)
 target_include_directories("PiAA-Project_3-Game" PRIVATE "/src/")
 target_include_directories("PiAA-Project_3-Game" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
 target_include_directories("PiAA-Project_3-Game" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/external/img/")
